--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,9 @@
-h1, h2, h3, h4, h5, h6{
+h1, h2, h4, h5 {
     color: white;
     margin-bottom: 35px;
 }
+
+
 
 .navbar-nav{
     margin-left: auto;
@@ -79,8 +81,6 @@ body{
     font-size:3em;
 
 }
-
-
 
 #contact {
     background-color: rgb(160, 93, 93);
